--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.1",
+    "@clerk/nextjs": "^4.27.2",
     "@clerk/themes": "^1.7.9",
     "@pinecone-database/pinecone": "^1.1.2",
-    "@prisma/client": "^5.6.0",
     "ai": "^2.2.25",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "openai": "^4.19.1",
     "prettier": "^3.1.0",
-    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
