--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@pinecone-database/pinecone": "^1.1.2",
     "ai": "^2.2.25",
     "axios": "^1.6.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "openai": "^4.19.1",
