--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "openai": "^4.19.1",
     "prettier": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
